MNWR-106 - fix footnotes align white text

--- a/app/css/sections/_dosing-efficacy.scss
+++ b/app/css/sections/_dosing-efficacy.scss
@@ -330,7 +330,7 @@ $space-mobile-copy: 4.6875%;
   .chart-1{
         padding-bottom:34px;
         .footnote{
-            margin-top:-69px;
+            margin-top:-75px;
         }
         .graphic-superscript{
             max-width: 1003px;
@@ -429,7 +429,7 @@ $space-mobile-copy: 4.6875%;
             }
         }
         .footnote{
-             margin-top: -58px;
+             margin-top: -72px;
         }
         /*.animation{
             margin-top:-154px;
